--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Unemployment and English Language Proficiency</title>
+  <title>LEP Residents of NYC</title>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 </head>
@@ -13,19 +13,19 @@
 <body>
   <div class='container'>
     <div id='sidebar'>
-      <h1>Unemployment and English Language Proficiency</h1>
-      <div id='description'>There are many differeng language communities in New York City. While the city is very diverse, very often those who do not speak English lack access to job opportunities.</div>
-      <div id='instructions'>Click on the buttons in the sidebar to see where some of the largest communities are located in the city.</div>
+      <h1>English Language Proficiency in NYC</h1>
+      <div id='description'>There are many different language communities in New York City. While the city is very diverse, very often those who do not speak English lack access to job opportunities.</div>
+      <div id='instructions'>Click on the buttonsat the top to see where New Yorkers need language access asssistance..</div>
       <!-- text changes with click -->
       <div id='tractInfo'>
         <div>
           <p class="tractData"><b><i><span id='tractNumber'></span></i></b></p>
         </div>
         <div>
-          <p class="tractData">Total Population: <b><span id='totalPop'></span></b></p>
+          <p class="tractData">Number of LEPs: <b><span id='totalPop'></span></b></p>
         </div>
         <div>
-          <p class="tractData">Number of non-English Speakers: <b><span id='notEnglish'></span></b></p>
+          <p class="tractData">Percentage of LEPs:<b><span id='notEnglish'></span></b></p>
         </div>
       </div>
 
@@ -38,7 +38,7 @@
       <!-- Modal content -->
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
       </div>
 
     </div>
@@ -87,6 +87,18 @@
     <div id='mapContainer'>MAP</div>
   </div>
 
+  <div class="layerselectorcontainer">
+    <div class="btn-group-vertical btn-group-sm" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary"><i class="fas fa-smog"></i><bold>All LEPs</bold></button>
+      <button type="button" class="btn btn-secondary" id="sp">Spanish</button>
+      <button type="button" class="btn btn-secondary" id="ch">Chinese</button>
+      <button type="button" class="btn btn-secondary" id="ko">Korean</button>
+      <button type="button" class="btn btn-secondary" id="fr">French</button>
+      <button type="button" class="btn btn-secondary" id="ru">Russian</button>
+      <button type="button" class="btn btn-secondary" id="ab">Arabic</button>
+      <button type="button" class="btn btn-secondary" id="ge">Yiddish</button>
+    </div>
+  </div>
 
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
