organized data by button

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <div class="layerselectorcontainer">
     <div class="btn-group-vertical btn-group-sm" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-primary"><i class="fas fa-smog"></i><bold>All LEPs</bold></button>
+      <button type="button" class="btn btn-primary" id="noEng"></i>All LEPs</button>
       <button type="button" class="btn btn-secondary" id="sp">Spanish</button>
       <button type="button" class="btn btn-secondary" id="ch">Chinese</button>
       <button type="button" class="btn btn-secondary" id="ko">Korean</button>
