wired all buttons

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
 
   <div class="layerselectorcontainer">
     <div class="btn-group-vertical btn-group-sm" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-primary" id="noEng"></i>All LEPs</button>
+      <button type="button" class="btn btn-secondary" id="noEng">All LEPs</button>
       <button type="button" class="btn btn-secondary" id="sp">Spanish</button>
       <button type="button" class="btn btn-secondary" id="ch">Chinese</button>
-      <button type="button" class="btn btn-secondary" id="ko">Korean</button>
+      <button type="button" class="btn btn-secondary" id="kor">Korean</button>
       <button type="button" class="btn btn-secondary" id="fr">French</button>
       <button type="button" class="btn btn-secondary" id="ru">Russian</button>
-      <button type="button" class="btn btn-secondary" id="ab">Arabic</button>
-      <button type="button" class="btn btn-secondary" id="ge">Yiddish</button>
+      <button type="button" class="btn btn-secondary" id="ar">Arabic</button>
+      <button type="button" class="btn btn-secondary" id="ger">Yiddish</button>
     </div>
   </div>
 
