--- a/index.html
+++ b/index.html
@@ -22,35 +22,19 @@
       <!-- The Modal -->
       <div id="myModal" class="modal">
 
-      <!-- Modal content -->
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+            specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+
       </div>
-
-    </div>
-
-
 
       <!--legend-->
       <div class='legend-box'>
         <h2>Legend</h2>
-        <div class="row2" id="legendbar">
-           <p class='ranknumbers'>
-             0%
-
-             100%</p>
-           <div class="column2" id="legendbar1">
-           </div>
-           <div class="column2" id="legendbar2">
-           </div>
-           <div class="column2" id="legendbar3">
-           </div>
-           <div class="column2" id="legendbar4">
-           </div>
-           <div class="column2" id="legendbar5">
-           </div>
-         </div>
         <div class="legend">
           <div class=colorDots id=a> </div>
           <div class=pctgColor>0-10%</div>
@@ -78,12 +62,7 @@
         <div class="legend">
           <p>
           <div class=colorDots id=f> </div>
-          <div class=pctgColor>50-60%</div>
-        </div>
-        <div class="legend">
-          <p>
-          <div class=colorDots id=g> </div>
-          <div class=pctgColor>>60%</div>
+          <div class=pctgColor>>50%</div>
         </div>
       </div>
 
@@ -94,7 +73,7 @@
   </div>
 
   <div class="layerselectorcontainer">
-    <div class="btn-group-vertical btn-group-sm" role="group" aria-label="Basic example">
+    <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
       <button type="button" class="btn btn-secondary" id="noEng">All LEPs</button>
       <button type="button" class="btn btn-secondary" id="sp">Spanish</button>
       <button type="button" class="btn btn-secondary" id="ch">Chinese</button>
