--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
   <div class='container'>
     <div id='sidebar'>
       <h1>English Language Proficiency in NYC</h1>
-      <div id='description'>There are many different language communities in New York City. Often, residents who are not proficient in English (LEPs or Low-English Proficient Individuals) tend to cluster in communities throughout the city.</div>
-      <div id='instructions'>Use the buttons at the top of the map to see where New Yorkers need language access asssistance for different languages.</div>
+      <div id='instructions'>Use the buttons at the top of the map to see where New Yorkers need language access in different languages.
+      </br></br>Hover over a borough to view more information. </p></div>
+
+      <div class="infobox">
+          <h4 id="subjecthead"> <i class="fas fa-info-circle"></i> How to Use This Map</h4>
+          <p id="infofill"> </br>This includes all individuals 5 years and over with low English proficiency, no matter their native language.</p>
+      </div>
 
       <!-- Trigger/Open The Modal -->
-      <button id="myBtn"><i class="modalButton"></i> Methodology</button>
+      <button id="myBtn"><i class="modalButton"></i>About</button>
       <!-- The Modal -->
       <div id="myModal" class="modal">
 
         <!-- Modal content -->
         <div class="modal-content">
           <span class="close">&times;</span>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-            specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+          <p><div id='description'>There are many different language communities in New York City. Often, residents who are not proficient in English (LEPs or Low-English Proficient Individuals) cluster in communities throughout the city.</div></p>
         </div>
 
       </div>
