--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
   <div class='container'>
     <div id='sidebar'>
       <h1>English Language Proficiency in NYC</h1>
-      <div id='instructions'>Use the buttons at the top of the map to see where New Yorkers need language access in different languages.
+      <h4>How to Use this Map</h4>
+      <div id='instructions'>Use the buttons at the top of the map to see where New Yorkers need services available in languages other than English.
       </br></br>Hover over a borough to view more information. </p></div>
 
       <div class="infobox">
-          <h4 id="subjecthead"> <i class="fas fa-info-circle"></i> How to Use This Map</h4>
-          <p id="infofill"> </br>This includes all individuals 5 years and over with low English proficiency, no matter their native language.</p>
+          <h4 id="subjecthead"> <i class="fas fa-info-circle"></i>All LEPs</br>(People who Don't Speak English)</h4>
+          <p id="infofill"> </br>This includes everyone 5 and over with low English proficiency, no matter their native language.</p>
       </div>
 
       <!-- Trigger/Open The Modal -->
-      <button id="myBtn"><i class="modalButton"></i>About</button>
+      <button id="myBtn"><i class="modalButton"></i>About this Map</button>
       <!-- The Modal -->
       <div id="myModal" class="modal">
 
