--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <div class="infobox">
           <h4 id="subjecthead"> <i class="fas fa-info-circle"></i>All LEPs</br>(People who Don't Speak English)</h4>
-          <p id="infofill"> </br>This includes everyone 5 and over with low English proficiency, no matter their native language.</p>
+          <p id="infofill"> </br>This includes everyone with </br><b>L</b>ow <b>E</b>nglish <b>P</b>roficiency, no matter their native language.</p>
       </div>
 
       <!-- Trigger/Open The Modal -->
