--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
       <h1>English Language Proficiency in NYC</h1>
       <h4>How to Use this Map</h4>
       <div id='instructions'>Use the buttons at the top of the map to see where New Yorkers need services available in languages other than English.
-      </br></br>Hover over a borough to view more information. </p></div>
+        </br></br>Hover over a borough to view more information. </p>
+      </div>
 
       <div class="infobox">
-          <h4 id="subjecthead"> <i class="fas fa-info-circle"></i>All LEPs</br>(People who Don't Speak English)</h4>
-          <p id="infofill"> </br>This includes everyone with </br><b>L</b>ow <b>E</b>nglish <b>P</b>roficiency, no matter their native language.</p>
+        <h4 id="subjecthead"> <i class="fas fa-info-circle"></i>All LEPs</br>(People who Don't Speak English)</h4>
+        <p id="infofill"> </br>This includes everyone with </br><b>L</b>ow <b>E</b>nglish <b>P</b>roficiency, no matter their native language.</p>
       </div>
 
       <!-- Trigger/Open The Modal -->
@@ -31,7 +32,9 @@
         <!-- Modal content -->
         <div class="modal-content">
           <span class="close">&times;</span>
-          <p><div id='description'>There are many different language communities in New York City. Often, residents who are not proficient in English (LEPs or Low-English Proficient Individuals) cluster in communities throughout the city.</div></p>
+          <p>
+          <div id='description'>There are many different language communities in New York City. Often, residents who are not proficient in English (LEPs or Low-English Proficient Individuals) cluster in communities throughout the city.</div>
+          </p>
         </div>
 
       </div>
@@ -78,14 +81,14 @@
 
   <div class="layerselectorcontainer">
     <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-secondary" id="noEng">All LEPs</button>
-      <button type="button" class="btn btn-secondary" id="sp">Spanish</button>
-      <button type="button" class="btn btn-secondary" id="ch">Chinese</button>
-      <button type="button" class="btn btn-secondary" id="kor">Korean</button>
-      <button type="button" class="btn btn-secondary" id="fr">French</button>
-      <button type="button" class="btn btn-secondary" id="ru">Russian</button>
-      <button type="button" class="btn btn-secondary" id="ar">Arabic</button>
-      <button type="button" class="btn btn-secondary" id="ger">Yiddish</button>
+      <button type="button" class="btn-secondary" id="noEng">All LEPs</button>
+      <button type="button" class="btn-secondary" id="sp">Spanish</button>
+      <button type="button" class="btn-secondary" id="ch">Chinese</button>
+      <button type="button" class="btn-secondary" id="kor">Korean</button>
+      <button type="button" class="btn-secondary" id="fr">French</button>
+      <button type="button" class="btn-secondary" id="ru">Russian</button>
+      <button type="button" class="btn-secondary" id="ar">Arabic</button>
+      <button type="button" class="btn-secondary" id="ger">Yiddish</button>
     </div>
   </div>
 
