--- a/index.html
+++ b/index.html
@@ -39,44 +39,29 @@
 
       </div>
 
-      <!--legend-->
-      <div class='legend-box'>
-        <h2>Legend</h2>
-        <div class="legend">
-          <div class=colorDots id=a> </div>
-          <div class=pctgColor>0-10%</div>
-        </div>
-        <div class="legend">
-          <p>
-          <div class=colorDots id=b> </div>
-          <div class=pctgColor>10-20%</div>
-        </div>
-        <div class="legend">
-          <p>
-          <div class=colorDots id=c> </div>
-          <div class=pctgColor>20-30%</div>
-        </div>
-        <div class="legend">
-          <p>
-          <div class=colorDots id=d> </div>
-          <div class=pctgColor>30-40%</div>
-        </div>
-        <div class="legend">
-          <p>
-          <div class=colorDots id=e> </div>
-          <div class=pctgColor>40-50%</div>
-        </div>
-        <div class="legend">
-          <p>
-          <div class=colorDots id=f> </div>
-          <div class=pctgColor>>50%</div>
-        </div>
-      </div>
-
       <div id='data'>Data for this map comes from the <a href="https://data.census.gov/cedsci/table?q=C16001%3A%20LANGUAGE%20SPOKEN%20AT%20HOME%20FOR%20THE%20POPULATION%205%20YEARS%20AND%20OVER&tid=ACSDT5Y2018.C16001&hidePreview=true">Census
           Bureau</a> and was accessed via the <a href="https://prattcenter.net/resources/neighborhood_data_portal">Pratt Neighborhood Data Portal</a>.</div>
     </div>
-    <div id='mapContainer'>MAP</div>
+    <div id='mapContainer'>MAP
+    </div>
+  </div>
+
+  <div id='legend-container'>
+    <div class='legend-head'>
+      <b>LEPs as a Percentage of the Population</b>
+    </div>
+    <div class="color-code">
+      <div class="colors" id="c1">
+      </div>
+    </div>
+    <div class="color-container">
+      <div>0%</div>
+      <div>10%</div>
+      <div>20%</div>
+      <div>30%</div>
+      <div>40%</div>
+      <div>50%</div>
+    </div>
   </div>
 
   <div class="layerselectorcontainer">
