created a box for instructions div

--- a/index.html
+++ b/index.html
@@ -14,18 +14,8 @@
   <div class='container'>
     <div id='sidebar'>
       <h1>English Language Proficiency in NYC</h1>
-      <h4>How to Use this Map</h4>
-      <div id='instructions'>Use the buttons at the top of the map to see where New Yorkers need services available in languages other than English.
-        </br></br>Hover over a borough to view more information. </p>
-      </div>
-
-      <div class="infobox">
-        <h4 id="subjecthead"> <i class="fas fa-info-circle"></i>All LEPs</br>(People who Don't Speak English)</h4>
-        <p id="infofill"> </br>This includes everyone with </br><b>L</b>ow <b>E</b>nglish <b>P</b>roficiency, no matter their native language.</p>
-      </div>
-
       <!-- Trigger/Open The Modal -->
-      <button id="myBtn"><i class="modalButton"></i>About this Map</button>
+      <button id="myBtn"><i class="modalButton"></i>About</button>
       <!-- The Modal -->
       <div id="myModal" class="modal">
 
@@ -38,6 +28,17 @@
         </div>
 
       </div>
+      <div id='instructions'>
+        <h4>How to Use this Map</h4>
+        <div>Use the buttons at the top of the map to see where New Yorkers need services available in languages other than English.</br></br>Hover over a the map to view more information. </p>
+        </div>
+      </div>
+
+      <div class="infobox">
+        <h4 id="subjecthead"> <i class="fas fa-info-circle"></i>All LEPs</br>(People who Don't Speak English)</h4>
+        <p id="infofill"> </br>This includes everyone with </br><b>L</b>ow <b>E</b>nglish <b>P</b>roficiency, no matter their native language.</p>
+      </div>
+
 
       <div id='data'>Data for this map comes from the <a href="https://data.census.gov/cedsci/table?q=C16001%3A%20LANGUAGE%20SPOKEN%20AT%20HOME%20FOR%20THE%20POPULATION%205%20YEARS%20AND%20OVER&tid=ACSDT5Y2018.C16001&hidePreview=true">Census
           Bureau</a> and was accessed via the <a href="https://prattcenter.net/resources/neighborhood_data_portal">Pratt Neighborhood Data Portal</a>.</div>
