made language clearer for users

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
   <div class='container'>
     <div id='sidebar'>
-      <h1>English Language Proficiency in NYC</h1>
+      <h1>Non-English Speakers in NYC</h1>
+      <h3>Where do New Yorkers that don't Speak English live?</h3>
       <!-- Trigger/Open The Modal -->
       <button id="myBtn"><i class="modalButton"></i>About</button>
       <!-- The Modal -->
@@ -23,25 +24,24 @@
         <div class="modal-content">
           <span class="close">&times;</span>
           <p>
-          <div id='description'>There are many different language communities in New York City. Often, residents who are not proficient in English (LEPs or Low-English Proficient Individuals) cluster in communities throughout the city.</div>
+          <div id='description'>There are many different language communities in New York City. Often, residents who are not proficient in English (LEPs or Low-English Proficient Individuals) cluster in communities throughout the city. </br></br>The New York City government provides some services in languages other than English, but not all. <a href="https://www1.nyc.gov/site/buildings/about/language-access-plan.page">Click here</a> to learn more about the city's Language Access Plan.</div>
           </p>
+          <div id='data'>Data for this map comes from the <a href="https://data.census.gov/cedsci/table?q=C16001%3A%20LANGUAGE%20SPOKEN%20AT%20HOME%20FOR%20THE%20POPULATION%205%20YEARS%20AND%20OVER&tid=ACSDT5Y2018.C16001&hidePreview=true">Census
+              Bureau</a> and was accessed via the <a href="https://prattcenter.net/resources/neighborhood_data_portal">Pratt Neighborhood Data Portal</a>.
+          </div>
         </div>
 
       </div>
       <div id='instructions'>
         <h4>How to Use this Map</h4>
-        <div>Use the buttons at the top of the map to see where New Yorkers need services available in languages other than English.</br></br>Hover over a the map to view more information. </p>
+        <div>Click the buttons at the top of the map to which languages these New Yorkers do speak!.</br></br>Hover over a the map to view more information. </p>
         </div>
       </div>
 
       <div class="infobox">
         <h4 id="subjecthead"> <i class="fas fa-info-circle"></i>All LEPs</br>(People who Don't Speak English)</h4>
-        <p id="infofill"> </br>This includes everyone with </br><b>L</b>ow <b>E</b>nglish <b>P</b>roficiency, no matter their native language.</p>
+        <p id="infofill"> </br>The map is currently showing </br>all New Yorkers with </br><b>L</b>ow <b>E</b>nglish <b>P</b>roficiency, no matter their native language.</p>
       </div>
-
-
-      <div id='data'>Data for this map comes from the <a href="https://data.census.gov/cedsci/table?q=C16001%3A%20LANGUAGE%20SPOKEN%20AT%20HOME%20FOR%20THE%20POPULATION%205%20YEARS%20AND%20OVER&tid=ACSDT5Y2018.C16001&hidePreview=true">Census
-          Bureau</a> and was accessed via the <a href="https://prattcenter.net/resources/neighborhood_data_portal">Pratt Neighborhood Data Portal</a>.</div>
     </div>
     <div id='mapContainer'>MAP
     </div>
