--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
         <div class="modal-content">
           <span class="close">&times;</span>
           <p>
-          <div id='description'>There are many different language communities in New York City. Often, residents who are not proficient in English (LEPs or Low-English Proficient Individuals) cluster in communities throughout the city. </br></br>The New York City government provides some services in languages other than English, but not all. <a href="https://www1.nyc.gov/site/buildings/about/language-access-plan.page">Click here</a> to learn more about the city's Language Access Plan.</div>
+          <div id='description'>New York City is home to an incredible degree of linguistic diversity. Many agencies
+within the NYC government offer services in English and Spanish (the most widely spoken
+minority language by a large margin), but access to services in smaller language communities is
+much more uneven. This is frustrating considering that many “smaller” communities number over
+50,000 speakers, which is comparable to the population of many small American cities outright.</br></br>
+It is vital to provide information and services in more languages to truly meet the needs of New
+Yorkers and start to close these huge service gaps.
+Take the electoral system as one example. The city is already expanding its language services beyond
+what is mandated by Federal Law, but many logistical shortfalls are leaving the targeted eligible
+voters out of the process. This is a longstanding and stubborn problem, which we know thanks to
+the election-monitoring of Community-Based Organizations and litigation across the country.</br></br>
+         <a href="https://www1.nyc.gov/site/buildings/about/language-access-plan.page">Click here</a> to learn more about the city's Language Access Plan.</div>
           </p>
           <div id='data'>Data for this map comes from the <a href="https://data.census.gov/cedsci/table?q=C16001%3A%20LANGUAGE%20SPOKEN%20AT%20HOME%20FOR%20THE%20POPULATION%205%20YEARS%20AND%20OVER&tid=ACSDT5Y2018.C16001&hidePreview=true">Census
               Bureau</a> and was accessed via the <a href="https://prattcenter.net/resources/neighborhood_data_portal">Pratt Neighborhood Data Portal</a>.
