wrote in readme.md

--- a/index.html
+++ b/index.html
@@ -23,23 +23,24 @@
         <!-- Modal content -->
         <div class="modal-content">
           <span class="close">&times;</span>
-            <p>
-              <div id='description'>New York City is home to an incredible degree of linguistic diversity. Many agencies
-                within the NYC government offer services in English and Spanish (the most widely spoken
-                minority language by a large margin), but access to services in smaller language communities is
-                much more uneven. But in NYC, many “smaller” communities number over
-                50,000 speakers!</br></br>
-                It is vital to provide information and services in more languages to truly meet the needs of New
-                Yorkers and start to close these huge service gaps.
-                Take the electoral system as one example. As mandated by the Voting Rights Act, the <a href="https://vote.nyc/page/interpreter#p0">NYC Board of Elections</a> provides Spanish interpretation in all five boroughs, Chinese in Manhattan, Brooklyn and Queens, 
-                and Korean, Bengali and Hindi in Queens as of 2020.
-                The newly-formed <a href="https://www1.nyc.gov/site/civicengagement/voting/voting.page">Civic Engagement Commission</a> is attempting to expand the city's language services beyond
-                what is mandated by Federal Law, but many logistical shortfalls are leaving the targeted eligible
-                voters out of the process. This is a longstanding and stubborn problem, which we know thanks to
-                the election-monitoring of Community-Based Organizations and litigation all over the country.</br></br>
-                <a href="https://www1.nyc.gov/site/buildings/about/language-access-plan.page">Click here</a> to learn more about the city's Language Access Plan.
-              </div>
-            </p>
+          <p>
+            <div id='description'>New York City is home to an incredible degree of linguistic diversity. Many agencies
+              within the NYC government offer services in English and Spanish (the most widely spoken
+              minority language by a large margin), but access to services in smaller language communities is
+              much more uneven. But in NYC, many “smaller” communities number over
+              50,000 speakers!</br></br>
+              It is vital to provide information and services in more languages to truly meet the needs of New
+              Yorkers and start to close these huge service gaps.
+              Take the electoral system as one example. As mandated by the Voting Rights Act, the <a href="https://vote.nyc/page/interpreter#p0">NYC Board of Elections</a> provides Spanish interpretation in all five boroughs, Chinese in Manhattan,
+              Brooklyn and Queens,
+              and Korean, Bengali and Hindi in Queens as of 2020.
+              The newly-formed <a href="https://www1.nyc.gov/site/civicengagement/voting/voting.page">Civic Engagement Commission</a> is attempting to expand the city's language services beyond
+              what is mandated by Federal Law, but many logistical shortfalls are leaving the targeted eligible
+              voters out of the process. This is a longstanding and stubborn problem, which we know thanks to
+              the election-monitoring of Community-Based Organizations and litigation all over the country.</br></br>
+              <a href="https://www1.nyc.gov/site/buildings/about/language-access-plan.page">Click here</a> to learn more about the city's Language Access Plan.
+            </div>
+          </p>
           <div id='data'>Data for this map comes from the <a href="https://data.census.gov/cedsci/table?q=C16001%3A%20LANGUAGE%20SPOKEN%20AT%20HOME%20FOR%20THE%20POPULATION%205%20YEARS%20AND%20OVER&tid=ACSDT5Y2018.C16001&hidePreview=true">Census
               Bureau</a> and was accessed via the <a href="https://prattcenter.net/resources/neighborhood_data_portal">Pratt Neighborhood Data Portal</a>.
           </div>
