--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
       <div id='instructions'>
         <h4>How to Use this Map</h4>
-        <div>Click the buttons at the top of the map to which languages these New Yorkers do speak!.</br></br>Hover over a the map to view more information. </p>
+        <div>Click the buttons at the top of the map to which languages these New Yorkers do speak!.</p>
         </div>
       </div>
 
